trunk/Archive2/ce/bc914877ab3863/output
main.cpp:15:17: warning: inheriting constructor does not inherit ellipsis [-Winherited-variadic-ctor]
    using base::base;
                ^
main.cpp:10:5: note: constructor declared with ellipsis here
    base(T,...) { std::cout << "floating point\n"; }
    ^
main.cpp:20:5: error: call to deleted constructor of 'derived'
    derived{42};
    ^      ~~~~
main.cpp:15:17: note: deleted constructor was inherited here
    using base::base;
                ^
main.cpp:7:5: note: constructor cannot be inherited
    base(T) { std::cout << "integral\n"; }
    ^
main.cpp:21:5: error: no matching constructor for initialization of 'derived'
    derived{4.2};
    ^      ~~~~~
main.cpp:13:8: note: candidate constructor (the implicit copy constructor) not viable: no known conversion from 'double' to 'const derived &' for 1st argument
struct derived : base
       ^
main.cpp:13:8: note: candidate constructor (the implicit move constructor) not viable: no known conversion from 'double' to 'derived &&' for 1st argument
struct derived : base
       ^
main.cpp:6:62: note: candidate template ignored: disabled by 'enable_if' [with T = double]
    template<typename T, typename = typename std::enable_if< std::is_integral<T>::value, int >::type>
                                                             ^
main.cpp:13:8: note: candidate constructor (the implicit default constructor) not viable: requires 0 arguments, but 1 was provided
struct derived : base
       ^
1 warning and 2 errors generated.
